Throw failures dealing with ready for GC state in InMemoryFileInfoStore